--- a/BootstrapWeek1/conFusion/package.json
+++ b/BootstrapWeek1/conFusion/package.json
@@ -19,13 +19,22 @@
   "author": "Joe",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.5",
     "cssmin": "^0.4.3",
+    "grunt": "^1.0.4",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.0.2",
+    "gulp": "^4.0.1",
+    "gulp-sass": "^4.0.2",
     "htmlmin": "0.0.7",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "onchange": "^5.2.0",
     "parallelshell": "^3.0.1",
     "rimraf": "^2.6.3",
+    "time-grunt": "^2.0.0",
     "uglifyjs": "^2.4.11",
     "usemin-cli": "^0.5.1"
   },
